made a boiler plate for tailwind config
